# ECS

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
.github/workflows/: macos.yml  release.yml  windows.yml
benchmark/: CMakeLists.txt
benchmark/src/: Benchmarks.hpp  Components.hpp  Systems.hpp  main.cpp
cmake/: StandardSettings.cmake
include/ecs/: Archetype.hpp  ArchetypeChunk.hpp  Component.hpp  Engine.hpp  EntityIterator.hpp  System.hpp  ecs.hpp  example.hpp
scripts/: run-clang-format.bat  run-clang-tidy.bat
source/ecs/: Archetype.hpp  ArchetypeChunk.cpp  ArchetypeChunk.hpp  CommandQueue.cpp  CommandQueue.hpp  Component.hpp  Core.hpp  Engine.cpp  Engine.hpp  EntityIterator.hpp  OptionalRef.hpp  System.cpp  System.hpp
src/ecs/: Archetype.cpp  Archetype.hpp  ArchetypeChunk.cpp  ArchetypeChunk.hpp  Component.hpp  Core.hpp  Engine.cpp  Engine.hpp  EntityIterator.hpp  PlatformDetection.hpp  System.cpp  System.hpp
src/ecs/math/: math.cpp
test/: CMakeLists.txt
test/source/: ArchetypeChunkTest.hpp  ArchetypeTest.hpp  CommandQueueTest.hpp  ComponentTest.hpp  CoreTest.hpp  EngineTest.hpp  SystemTest.hpp  main_test.cpp  test.hpp
test/src/: ArchetypeChunkTest.hpp  ArchetypeTest.hpp  ComponentTest.hpp  CoreTest.hpp  EngineTest.hpp  SystemTest.hpp  main_test.cpp  math_test.cpp  test.hpp
